# UNO

./: .gitignore  CMakeLists.txt  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  ListCDJugadores.cpp  ListCDJugadores.h  NodoJugador.cpp  NodoJugador.h  README.md  main.cpp
Cartas/: Carta.cpp  Carta.h  CartaAccion.cpp  CartaAccion.h  CartaComodin.cpp  CartaComodin.h  CartaNumero.cpp  CartaNumero.h  CartaRoboAleatorio.cpp  CartaRoboAleatorio.h  CartaTransferenciaColor.cpp  CartaTransferenciaColor.h
Mano/: ListaManoCartas.cpp  ListaManoCartas.h  NodoCartaMano.cpp  NodoCartaMano.h
Pila/: NodoPilaCarta.cpp  NodoPilaCarta.h  PilaCartas.cpp  PilaCartas.h
Reglas/: ConfiguracionPartida.h  ReglasUno.cpp  ReglasUno.h  TipoAcumulacion.h
